
	* mhl/types.h, mhl/escape.h: replaced bool type by stdbool.h (fixing #240)

2009-02-03 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* lib/mc.ext.in: command line options fix by adamw (#183)

2009-02-03 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* lib/mc.lib: added patch on #219 by angel_il
	* vfs/extfs/u7z: patch from mandriva (#194)

2009-02-02 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* vfs/extfs/iso9660.in: added iso9660 fix by cppgx (#86)

2009-02-01 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* src/util.c: fixed name_trunc() on NULL or empty parameters
	* src/achown.c: fixed unitialized var in init_chown_advanced()
	  (patch from andrew_b)

2009-01-31 Enrico Weigelt, metux ITS <weigelt@metux.de>, Patrick Winnertz <winnie@debian.org>, Slava Zanko <slavazanko@gmail.com>, Sergei Trofimovich  <slyfox@inbox.ru>

	* edit/editcmd.c, mhl/escape.h, mhl/string.h, mhl/types.h, src/Makefile.am,
	* src/boxes.c, src/command.c, src/complete.c, src/complete.h, src/file.c,
	* src/find.c, src/main.c, src/panelize.c, src/util.c, src/utilunix.c,
	* src/widget.c, src/widget.h, src/wtools.c, vfs/fish.c:
	  fixed shell escaping issues in commandline completion engine

2009-01-31 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* replaced buggy concat_dir_and_file() by mhl_str_dir_plus_file() (in mhl/string.h)

2009-01-30 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* src/Makefile.am, edit/Makefile.am vfs/Makefile.am: fixed #208
	  (out-of-tree builds)

2009-01-29 Mikhail S. Pobolovets <styx.mp@gmail.com>
	* lib/mc.ext.in: update for OpenOffice and StarOffice viewer.
	  odt2txt is now used

2009-01-29 Patrick Winnertz <winnie@debian.org> & Sergei Trofimovich  <slyfox@inbox.ru>

	* src/file.c: Added trailing dir separator for default path in copy/move dialogs.
	  This solves "strange" rename cases, when copying/moving is performed into
	  deleted directory.

2009-01-27 Enrico Weigelt, metux ITS <weigelt@metux.de>
