@@ -31,6 +31,10 @@
 	* lib/mc.lib: added patch on #219 by angel_il
 	* vfs/extfs/u7z: patch from mandriva (#194)
 
+2009-02-03 Enrico Weigelt, metux ITS <weigelt@metux.de>
+
+	* src/mountlist.c: fixed #179 (invalid block scale routine, problems with 32bit overflow)
+
 2009-02-02 Enrico Weigelt, metux ITS <weigelt@metux.de>
 
 	* vfs/extfs/iso9660.in: added iso9660 fix by cppgx (#86)
